--- a/src/template/html/default.html
+++ b/src/template/html/default.html
@@ -107,7 +107,7 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
-    <!-- 'copyright-year' set via makefile, author via md metadata section -->
+    <!-- 'copyright-year' and 'copyright-author' both set via makefile -->
     <footer>
       <hr>
       <small>
@@ -119,7 +119,7 @@ $endfor$
             <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a>
             <br>
           &copy; Copyright $copyright-year$,
-          <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://jraygauthier.github.io/">$author$</a>
+          <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://jraygauthier.github.io/">$copyright-author$</a>
         </p>
       </small>
     </footer>
